fixed build.gradle to run with jpro