@@ -1,73 +1,73 @@
-
-/**
- ******************  Script Configuration ******************
- */
 buildscript {
-  repositories {
-    jcenter()
-    mavenCentral()
+    repositories {
+        jcenter()
+        mavenCentral()
 
-    maven {
-      url "http://sandec.bintray.com/repo"
-        
-    }
-    maven {
-        url "https://plugins.gradle.org/m2/"
-    }
-  }
+        maven {
+            url "http://sandec.bintray.com/repo"
 
-  dependencies {
-    classpath 'com.sandec.jpro:jpro-plugin-gradle:2018.1.13'
-    classpath "org.javafxports:jfxmobile-plugin:1.3.15"
-    //classpath "org.openjfx:javafx-plugin:0.0.7"
-  }
+        }
+    }
+
+    dependencies {
+        classpath 'com.sandec.jpro:jpro-plugin-gradle:2018.1.13'
+    }
+}
+
+apply plugin: 'java'
+apply plugin: 'application'
+
+compileJava {
+    sourceCompatibility = 11
+    targetCompatibility = 11
 }
 
 repositories {
-mavenCentral()
-  jcenter()
+    mavenCentral()
+    jcenter()
     maven {
         url 'http://oss.sonatype.org/content/repositories/snapshots'
     }
 }
 
-
-
-
-apply plugin: 'java'
-apply plugin: 'application'
-//apply plugin: 'org.openjfx.javafxplugin'
-apply plugin: 'com.sandec.jpro'
-
-
-
-
 dependencies {
     compile 'com.github.almasb:fxgl:dev-SNAPSHOT'
 }
 
-//javafx {
-    //version = "12"
-    //modules = [ 'javafx.controls' ]
-//}
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.fxml,javafx.controls'
+        ]
+    }
+}
 
 
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.fxml,javafx.controls'
+        ]
+    }
+}
 
+
+apply plugin: 'com.sandec.jpro'
 
 mainClassName = 'com.almasb.fxgltest.WebApp'
 
-/**
- * jpro settings
- */
 jpro {
-  // for debugging
-  // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'
+    // for debugging
+    // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'
 
-  JVMArgs << '-Xmx1000m'
+    JVMArgs << '-Xmx1000m'
 
-  //jpro server port
-  port = 8080
+    //jpro server port
+    port = 55555
 
-  //jpro version (optional)
-  jproVersion = "2018.1.13"
+    //jpro version (optional)
+    jproVersion = "2018.1.13"
 }
